<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NXTimelapse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect to NXT</string>
    <string name="action_calc">Calculator</string>
    <string name="action_close">Close</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">NXTtimelapse Settings</string>
    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="title_activity_my_activity3">MyActivity3</string>
    <string name="title_activity_settings_activity2">NXTtimelapse Settings</string>
    <string name="title_activity_about">NXTimelapse About</string>

</resources>
