<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_connect"
        android:title="@string/action_connect"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_calc"
        android:title="@string/action_calc"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_close"
        android:title="@string/action_close"
        android:orderInCategory="100"
        android:showAsAction="never"/>
</menu>
